tests/udn_test_4/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: green
  labels:
    security: internal
spec:
  containers:
  - args:
    - "netexec"
    - "--http-port"
    - "9000"
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
  nodeName: ovn-worker
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
---

apiVersion: v1
kind: Pod
metadata:
  name: webserver-2
  namespace: green
  labels:
    security: internal  
spec:
  containers:
  - args:
    - "netexec"
    - "--http-port"
    - "9000"
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    imagePullPolicy: IfNotPresent
    name: agnhost-container
  nodeName: ovn-worker
  restartPolicy: Always
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
---

apiVersion: v1
kind: Pod
metadata:
  name: mybar
  namespace: bar
  labels:
    security: internal
spec:
  containers:
    - name: myfirstcontainer
      image: barimage
---

apiVersion: v1
kind: Pod
metadata:
  name: app-1
spec:
  containers:
    - name: myfirstcontainer
      image: defimage
